# COSC3307-Fireworks

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: app.h  camera.h  particle.h  scene.h  shader_utils.h
resource/: ground.frag  ground.vert  object.frag  object.vert  particle.frag  particle.vert  skybox.frag  skybox.vert
src/: app.cpp  camera.cpp  particle.cpp  scene.cpp  shader_utils.cpp
